--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,14 +3,28 @@
 
   <head>
   <title>CPU Meter</title>
+  <link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   </head>
   <body>
+
     <header>
       <section><h1>node CPU monitor</h1></section>
       <section><p>node micro service that feeds your computers central processing unit's useage</p></section>
     </header>
+
     <main>
       <%- body %>
     </main>
+
+    <script>
+      var socket = io.connect('http://localhost');
+      socket.on('useage', function(data) {
+        var useage = data.useage
+        $('body main samp').text(useage)
+      });
+    </script>
+
   </body>
 </html>
